[tool.poetry]
name = "bauble"
version = "0.1.0"
description = ""
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^6.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"
pyright = "^0.0.13"
flake8 = "^4.0.1"
taskipy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "poetry run isort bauble tests && poetry run black bauble tests"
lint = "poetry run flake8 bauble"
test = "poetry run pytest"
coverage = "poetry run coverage run -m pytest"